--- a/manifest.json
+++ b/manifest.json
@@ -249,7 +249,8 @@
 					"css/mui.min.css",
 					"js/app.js",
 					"m_welfare_main.html",
-					null
+					null,
+					"js/mui.js"
 				],
 				"refer": [
 					"m_task.html",
@@ -281,11 +282,15 @@
 					"images/task-right-bg.png",
 					"css/mui.min.css",
 					"m_task_junior.html",
-					"js/mui.js"
+					"js/mui.js",
+					"js/template.js"
 				],
 				"refer": [
 					"m_task_middle.html",
-					"m_task_senior.html"
+					"m_task_senior.html",
+					"html/m_detail_task.html",
+					"template.html",
+					"html/m_expsubmit_task.html"
 				],
 				"priority": 0
 			},
@@ -305,7 +310,11 @@
 					"%7B%static%20\u0027css/m_common.css\u0027%%7D",
 					"m_finance_sub1.html",
 					"css/m_task.css",
-					"css/m_common.css"
+					"css/m_common.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/m_finance.css",
+					"js/mui.js"
 				],
 				"refer": [
 					"m_finance_sub3.html",
@@ -352,7 +361,10 @@
 					"account/m_account_coupon.html",
 					"account/m_strategy.html",
 					"html/m_detail_welfare.html",
-					"account/m_account_withdraw.html"
+					"account/m_account_withdraw.html",
+					"account/m_account_settings.html",
+					"account/m_account_invite.html",
+					"html/m_information.html"
 				],
 				"priority": 0
 			},
@@ -426,7 +438,8 @@
 					"images/user-01.png",
 					"images/user-03.png",
 					"account/m_account_settings.html",
-					"images/user.png"
+					"images/user.png",
+					"js/mui.js"
 				],
 				"refer": [
 					"a_login.html",
@@ -517,10 +530,13 @@
 					"m_detail_welfare.html",
 					"js/share.js",
 					"fonts/wafuli-iconfont.woff",
-					"html/m_detail_welfare.html"
+					"html/m_detail_welfare.html",
+					"html/m_detail_task.html",
+					"js/mui.js"
 				],
 				"refer": [
-					"m_detail_youhuiquan.html"
+					"m_detail_youhuiquan.html",
+					"html/m_detail_finance.html"
 				],
 				"priority": 0
 			},
@@ -547,7 +563,8 @@
 					"js/mui.min.js",
 					"css/app.css",
 					"fonts/mui.ttf",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"js/mui.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -591,9 +608,13 @@
 					"css/mui.min.css",
 					"css/m_common.css",
 					"images/task-right-bg.png",
-					"js/mui.js"
+					"js/mui.js",
+					"js/template.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/m_detail_task.html",
+					"template.html"
+				],
 				"priority": 0
 			},
 			"m_task_senior.html": {
@@ -601,7 +622,11 @@
 					"js/mui.pullToRefresh.js",
 					"js/mui.pullToRefresh.material.js",
 					"images/task-right-bg.png",
-					"css/m_task.css"
+					"css/m_task.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/template.js",
+					"css/m_common.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -611,7 +636,11 @@
 					"images/task-right-bg.png",
 					"js/mui.pullToRefresh.js",
 					"js/mui.pullToRefresh.material.js",
-					"css/m_task.css"
+					"css/m_task.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/template.js",
+					"css/m_common.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -621,9 +650,14 @@
 					"css/m_finance.css",
 					"js/mui.min.js",
 					"css/mui.min.css",
-					"css/m_common.css"
+					"css/m_common.css",
+					"js/template.js",
+					"js/mui.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/m_detail_finance.html",
+					"template.html"
+				],
 				"priority": 0
 			},
 			"m_finance_sub2.html": {
@@ -637,7 +671,10 @@
 			"m_finance_sub3.html": {
 				"resources": [
 					"css/m_finance.css",
-					"css/m_common.css"
+					"css/m_common.css",
+					"css/mui.min.css",
+					"js/template.js",
+					"js/mui.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -917,6 +954,77 @@
 					"css/mui.min.css",
 					"css/m_detail_hongbao.css",
 					"fonts/wafuli-iconfont.woff",
+					"css/m_common.css",
+					"images/blank.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_detail_task.html": {
+				"resources": [
+					"images/blank.jpg",
+					"js/UserInfo.js",
+					"css/m_detail_taskandfinance.css",
+					"fonts/wafuli-iconfont.woff",
+					"css/m_common.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/mui.js"
+				],
+				"refer": [
+					"html/m_expsubmit_task.html",
+					"a_login.html"
+				],
+				"priority": 0
+			},
+			"html/m_expsubmit_task.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/m_expsubmit_task.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"js/UserInfo.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_detail_finance.html": {
+				"resources": [
+					"images/blank.jpg",
+					"js/UserInfo.js",
+					"css/m_detail_taskandfinance.css",
+					"css/mui.min.css",
+					"js/mui.js",
+					"fonts/wafuli-iconfont.woff",
+					"css/m_common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_information.html": {
+				"resources": [
+					"css/m_information.css",
+					"js/mui.pullToRefresh.js",
+					"js/mui.min.js",
+					"js/mui.pullToRefresh.material.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"html/m_detail_information.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_detail_information.html": {
+				"resources": [
+					"css/m_detail_information.css",
+					"html/m_information.html",
+					"js/mui.min.js",
+					"js/share.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"fonts/wafuli-iconfont.woff",
 					"css/m_common.css"
 				],
 				"refer": [],
@@ -1109,7 +1217,6 @@
 				"images/ic.png",
 				"images/bin-new.png",
 				"css/main.css",
-				"css/m_detail_taskandfinance.css",
 				"images/图层 227.png",
 				"images/share_logo.jpg",
 				"images/jf-in-01.png",
@@ -1304,7 +1411,6 @@
 				"js/jquery.easing.1.3.js",
 				"images/action.png",
 				"images/address.png",
-				"css/m_detail_information.css",
 				"images/Sign.png",
 				"images/img5.png",
 				"images/share-guide-bottom.png",
