--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
 		"iPad"
 	],
 	"id": "H5139D07C",/*应用的标识，创建应用时自动生成，勿手动修改*/
-	"name": "APP",/*应用名称，程序桌面图标名称*/
+	"name": "挖福利",/*应用名称，程序桌面图标名称*/
 	"version": {
-		"name": "1.0.0",/*应用版本名称*/
+		"name": "0.1",/*应用版本名称*/
 		"code": "83"
 	},
 	"description": "",/*应用描述信息*/
@@ -21,12 +21,8 @@
 		"url": "http://www.dcloud.io"
 	},
 	"permissions": {
-		"Accelerometer": {
-			"description": "访问加速度感应器"
-		},
-		"Audio": {
-			"description": "访问麦克风"
-		},
+		
+		
 		"Cache": {
 			"description": "管理应用缓存"
 		},
@@ -54,19 +50,13 @@
 		"Gallery": {
 			"description": "访问系统相册"
 		},
-		"Geolocation": {
-			"description": "访问位置信息"
-		},
+		
 		"Invocation": {
 			"description": "使用Native.js能力"
 		},
 
-		"Orientation": {
-			"description": "访问方向感应器"
-		},
-		"Proximity": {
-			"description": "访问距离感应器"
-		},
+		
+		
 		"Storage": {
 			"description": "管理应用本地数据"
 		},
@@ -80,18 +70,12 @@
 		"XMLHttpRequest": {
 			"description": "跨域网络访问"
 		},
-		"Zip": {
-			"description": "文件压缩与解压缩"
-		},
+		
 		"Barcode": {
 			"description": "管理二维码扫描插件"
 		},
-		"Maps": {
-			"description": "管理地图插件"
-		},
-		"Speech": {
-			"description": "管理语音识别插件"
-		},
+		
+		
 		"Webview": {
 			"description": "窗口管理"
 		},
@@ -110,7 +94,7 @@
 		"splashscreen": {
 			"autoclose": true,/*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
 			"waiting": true,
-			"delay": "0"
+			"delay": "2000"
 		},
 		"runmode": "liberate",/*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
 		"signature": "Sk9JTiBVUyBtYWlsdG86aHIyMDEzQGRjbG91ZC5pbw==",/*可选，保留给应用签名，暂不使用*/
@@ -137,33 +121,7 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": [
-					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
-					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
-					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
-					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
-					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
-					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
-					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
-					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
-					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
-					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
-					"<uses-feature android:name=\"android.hardware.camera\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_MOCK_LOCATION\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.CAMERA\"/>"
-				]
+				"permissions": ["<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.ACCESS_MOCK_LOCATION\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>"]
 			},
 			"orientation": [
 				"portrait-primary",
@@ -258,7 +216,8 @@
 					"m_account_index.html",
 					"m_finance_main.html",
 					"m_task_main.html",
-					"a_login.html"
+					"a_login.html",
+					"a_wafuli_guide.html"
 				],
 				"priority": 0
 			},
@@ -392,7 +351,12 @@
 					"html/m_hongbao.html",
 					"html/m_youhuiquan.html",
 					"html/m_activity_lottery.html",
-					"html/m_freshman_award.html"
+					"html/m_freshman_award.html",
+					"html/m_activity_recommend.html",
+					"a_login.html",
+					"html/m_activity_recom_rank.html",
+					"html/m_activity_recom_submit.html",
+					"html/m_activity_recom_info.html"
 				],
 				"priority": 0
 			},
@@ -618,7 +582,8 @@
 					"js/mui.js"
 				],
 				"refer": [
-					"account/m_password_reset.html"
+					"account/m_password_reset.html",
+					"account/m_register.html"
 				],
 				"priority": 0
 			},
@@ -810,7 +775,8 @@
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
-					"js/mui.js"
+					"js/mui.js",
+					"js/user-validate.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -862,7 +828,8 @@
 					"js/mui.js"
 				],
 				"refer": [
-					"account/m_account_exchange.html"
+					"account/m_account_exchange.html",
+					"html/m_activity_lottery.html"
 				],
 				"priority": 0
 			},
@@ -907,8 +874,8 @@
 					"js/mui.js"
 				],
 				"refer": [
-					"account/m_account_change_zhifubao.html",
-					"account/m_account_bind_zhifubao.html"
+					"account/m_account_bind_zhifubao.html",
+					"account/m_account_change_zhifubao.html"
 				],
 				"priority": 0
 			},
@@ -934,8 +901,8 @@
 				],
 				"refer": [
 					"account/m_account_change_password.html",
-					"account/m_account_change_zhifubao.html",
-					"account/m_account_bind_zhifubao.html"
+					"account/m_account_bind_zhifubao.html",
+					"account/m_account_change_zhifubao.html"
 				],
 				"priority": 0
 			},
@@ -978,7 +945,8 @@
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
-					"js/mui.js"
+					"js/mui.js",
+					"js/user-validate.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1259,7 +1227,9 @@
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png"
 				],
-				"refer": [],
+				"refer": [
+					"html/m_detail_information.html"
+				],
 				"priority": 0
 			},
 			"html/m_detail_information.html": {
@@ -1425,13 +1395,110 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"fonts/wafuli-iconfont.woff",
-					"css/m_common.css"
+					"css/m_common.css",
+					"fonts/wafuli-iconfont.eot",
+					"fonts/wafuli-iconfont.ttf",
+					"fonts/wafuli-iconfont.svg",
+					"images/share-guide-top.png",
+					"images/share-guide-bottom.png"
 				],
 				"refer": [
 					"account/m_register.html",
 					"a_login.html",
 					"account/m_account_invite.html"
 				],
+				"priority": 0
+			},
+			"html/m_activity_recommend.html": {
+				"resources": [
+					"js/mui.min.js",
+					"images/action.png",
+					"css/m_activity_recommend.css",
+					"fonts/wafuli-iconfont.woff",
+					"js/UserInfo.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"fonts/wafuli-iconfont.eot",
+					"fonts/wafuli-iconfont.ttf",
+					"fonts/wafuli-iconfont.svg",
+					"images/share-guide-top.png",
+					"images/share-guide-bottom.png"
+				],
+				"refer": [
+					"a_login.html",
+					"html/m_activity_recom_submit.html",
+					"html/m_activity_recom_info.html",
+					"html/m_activity_recom_rank.html"
+				],
+				"priority": 0
+			},
+			"html/m_activity_recom_rank.html": {
+				"resources": [
+					"css/m_activity_recom_rank.css",
+					"html/%7B%static%20\u0027js/mui.min.js\u0027%%7D",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/m_common.css",
+					"fonts/wafuli-iconfont.eot",
+					"fonts/wafuli-iconfont.woff",
+					"fonts/wafuli-iconfont.ttf",
+					"fonts/wafuli-iconfont.svg",
+					"images/share-guide-top.png",
+					"images/share-guide-bottom.png",
+					"js/mui.min.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_activity_recom_submit.html": {
+				"resources": [
+					"css/m_activity_recom_submit.css",
+					"js/UserInfo.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"fonts/wafuli-iconfont.eot",
+					"fonts/wafuli-iconfont.woff",
+					"fonts/wafuli-iconfont.ttf",
+					"fonts/wafuli-iconfont.svg",
+					"images/share-guide-top.png",
+					"images/share-guide-bottom.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_activity_recom_info.html": {
+				"resources": [
+					"css/m_activity_recom_info.css",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/m_common.css",
+					"fonts/wafuli-iconfont.eot",
+					"fonts/wafuli-iconfont.woff",
+					"fonts/wafuli-iconfont.ttf",
+					"fonts/wafuli-iconfont.svg",
+					"images/share-guide-top.png",
+					"images/share-guide-bottom.png",
+					"js/mui.min.js",
+					"js/UserInfo.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"a_wafuli_guide.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"images/guide-finance.png",
+					"images/guide-free.png",
+					"images/guide-task.png",
+					"css/a_wafuli_guide.css",
+					"images/guide-index.png"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
@@ -1453,7 +1520,6 @@
 				"images/head.png",
 				"images/invited-reg-bg.png",
 				"images/pic5.png",
-				"css/m_activity_recom_info.css",
 				"images/news-left-icon.png",
 				"images/Sign-v.png",
 				"images/pic_28.png",
@@ -1470,7 +1536,6 @@
 				"images/热（合并）.png",
 				"images/pic_14.png",
 				"images/task-02.png",
-				"css/m_activity_recom_rank.css",
 				"images/logo-9.png",
 				"images/pict_57.png",
 				"images/share-friend-row.png",
@@ -1486,16 +1551,13 @@
 				"images/pict_100.png",
 				"images/sinaweibo.png",
 				"images/newtitle1.png",
-				"images/sin-picon.png",
 				"images/understand-taste.png",
+				"images/sin-picon.png",
 				"images/understand-wfl-bg.png",
 				"images/flow-back.png",
-				"account/m_activity_lottery.html",
 				"fonts/huakangshaonv.ttf",
-				"registration/login-old.html",
 				"images/picture_104.png",
 				"images/left-icon3.png",
-				"js/accounts/cookie.js",
 				"images/nav-4.png",
 				"images/left-step3.png",
 				"images/pict_94.png",
@@ -1517,7 +1579,6 @@
 				"images/tu1.jpg",
 				"images/pic1.png",
 				"images/new2.png",
-				"registration/login.html",
 				"images/bottom-03.png",
 				"images/sin-picon-04.png",
 				"images/qiehuan-icon.png",
@@ -1551,71 +1612,61 @@
 				"fonts/DroidSans.ttf",
 				"images/new_cont.png",
 				"images/taste-right-bg.png",
-				"registration/register.html",
-				"images/today-03.jpg",
 				"images/youhuiquan-icon.jpg",
+				"images/today-03.jpg",
 				"images/favicon.ico",
 				"images/pic3.png",
 				"images/header-x.gif",
 				"images/newimg1.png",
 				"images/jf-out-02.png",
-				"registration/m_invite_accept.html",
 				"images/pict_51.png",
 				"fonts/华康少女体 .ttf",
-				"images/nav1s.png",
 				"images/my_pic2.png",
+				"images/nav1s.png",
 				"images/task-03.png",
-				"js/accounts/refresh.js",
 				"images/share-tqq.png",
 				"images/understand-finacing.png",
 				"images/understand-free.png",
 				"images/jf03.png",
-				"registration/logged_out.html",
 				"images/contpic2.png",
-				"js/accounts/jquery.blockUI.js",
 				"css/m_expsubmit.css",
 				"images/login-icon-msg.png",
 				"images/today-02.jpg",
-				"images/contpic1.png",
 				"images/lottery.png",
+				"images/contpic1.png",
 				"css/m_expsubmit_finance.css",
 				"images/btn-1.png",
 				"images/pop.png",
-				"images/newback1.png",
 				"images/shape.png",
-				"js/accounts/common.js",
-				"html/m_baoyou_header.html",
+				"images/newback1.png",
 				"images/search.png",
 				"images/out-01.png",
 				"images/login-icon-pic.png",
 				"images/nav-bg.png",
-				"images/sin-picon-06.png",
 				"images/nav-2.png",
+				"images/sin-picon-06.png",
 				"images/lf.png",
-				"js/auth/userInfo.js",
 				"images/zp.png",
-				"fonts/浪漫雅圆.ttf",
-				"images/left-icon4.png",
 				"images/sin-picon-03.png",
+				"images/left-icon4.png",
+				"fonts/浪漫雅圆.ttf",
 				"images/left-step1.png",
-				"images/left-icon1.png",
 				"css/m_freshman_introduction.css",
+				"images/left-icon1.png",
 				"images/图层 4.png",
-				"images/news-right-icon.png",
 				"js/index.js",
 				"images/pic7.png",
+				"images/news-right-icon.png",
 				"images/task-01.jpg",
 				"images/picin.png",
 				"images/go-pc.png",
 				"images/t2.png",
 				"images/login_banner.jpg",
 				"images/task-process-top.png",
-				"registration/m_register.html",
 				"images/abg.png",
 				"images/nav-1.png",
 				"images/t3.png",
 				"images/top.png",
-				"js/accounts/send.js",
 				"images/pic_11.png",
 				"images/jf3.png",
 				"images/pic_08.png",
@@ -1626,7 +1677,6 @@
 				"images/btn-2.png",
 				"images/bg-money.png",
 				"images/my_pic5.gif",
-				"js/auth/webquery.js",
 				"images/today-01.jpg",
 				"images/splash.jpg",
 				"js/rotate.js",
@@ -1638,18 +1688,15 @@
 				"images/logo-1.png",
 				"images/logo-again.png",
 				"images/rt.png",
-				"registration/m_login.html",
 				"images/signin.png",
-				"css/m_activity_recommend.css",
 				"images/bg-top.png",
-				"images/out-02.png",
 				"images/footer-x.gif",
+				"images/out-02.png",
 				"images/task-jietu_03.png",
 				"images/jf4.png",
 				"images/share-qq.png",
 				"images/jf-in-02.png",
 				"images/flow.png",
-				"images/action.png",
 				"images/left-step2.png",
 				"images/Sign.png",
 				"images/pic_32.png",
@@ -1657,7 +1704,6 @@
 				"images/pict_98.png",
 				"images/qihoo.png",
 				"images/sin-picon-05.png",
-				"js/share.html",
 				"images/top-3.png",
 				"images/nr2.png",
 				"images/jf1.png",
@@ -1667,7 +1713,6 @@
 				"images/图层 227.png",
 				"images/pic2.png",
 				"images/numberg3.png",
-				"css/m_activity_recom_submit.css",
 				"images/jf-in-01.png",
 				"images/user-02.png",
 				"images/top-1.png",
@@ -1696,7 +1741,6 @@
 				"images/turntable.png",
 				"images/newico4.png",
 				"css/m_account_message.css",
-				"registration/m_user_guide.html",
 				"images/back_to_top.png",
 				"images/pict_38.png",
 				"images/headinfo.png",
@@ -1707,11 +1751,10 @@
 				"fonts/Helvetica.Ttf",
 				"css/m_activity_Christmas.css",
 				"fonts/fangzheng.ttf",
-				"images/new5.png",
 				"images/newico3.png",
+				"images/new5.png",
 				"images/newico2.png",
-				"images/new4.png",
-				"js/json2.js"
+				"images/new4.png"
 			]
 		}
 	},
@@ -1730,8 +1773,6 @@
 	  "images/Sign-v.png",
 	  "images/Sign.png",
 	  "images/abg.png",
-	  "images/action.png",
-	  "images/back_to_top.png",
 	  "images/bg-logo.png",
 	  "images/bg-money.png",
 	  "images/bg-top.png",
@@ -1950,6 +1991,18 @@
 	  "images/图层 227.png",
 	  "images/图层 4.png",
 	  "images/热（合并）.png",
-	  "images/首页.jpg"
+	  "images/首页.jpg",
+	  "css/m_aboutus.css",
+	  "css/m_account_message.css",
+	  "css/m_activity_Christmas.css",
+	  "css/m_common_text.css",
+	  "css/m_expsubmit.css",
+	  "css/m_user_guide.css",
+	  "js/index.js",
+	  "js/m_task.js",
+	  "js/rotate.js",
+	  "css/m_detail_task.css",
+	  "css/m_freshman_introduction.css",
+	  "css/mui.css"
 	]
 }
