--- a/manifest.json
+++ b/manifest.json
@@ -180,8 +180,8 @@
 				},
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
-					"ldpi": "C:/Users/lch/Desktop/挖福利/splash/320x442.png", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "C:/Users/lch/Desktop/挖福利/splash/480x762.png","xhdpi":"C:/Users/lch/Desktop/挖福利/splash/720x1242.png","xxhdpi":"C:/Users/lch/Desktop/挖福利/splash/1080x1883 png-8.png"
+					"ldpi": "unpackage/res/splash/320x442.png", /*大屏启动图片，分辨率：320x442*/
+					"hdpi": "unpackage/res/splash/480x762.png","xhdpi":"unpackage/res/splash/720x1242.png","xxhdpi":"unpackage/res/splash/1080x1882 png-24.png"
 				}
 			},
 			"debug": false
@@ -2124,6 +2124,8 @@
 	  "images/guide-index.png",
 	  "images/guide-free.png",
 	  "images/guide-task.png",
-	  "images/guide-finance.png"
+	  "images/guide-finance.png",
+	  "images/user-00.png",
+	  "images/user-02.png"
 	]
 }
