--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 	"id": "H5139D07C",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "挖福利",/*应用名称，程序桌面图标名称*/
 	"version": {
-		"name": "1.3",/*应用版本名称*/
+		"name": "1.4",/*应用版本名称*/
 		"code": "83"
 	},
 	"description": "",/*应用描述信息*/
@@ -184,7 +184,7 @@
 					"hdpi": "unpackage/res/splash/480x762.png","xhdpi":"unpackage/res/splash/720x1242.png","xxhdpi":"unpackage/res/splash/1080x1882 png-24.png"
 				}
 			},
-			"debug": false
+			"debug": true
 		}
 	},
 	"dependencies": {
