--- a/manifest.json
+++ b/manifest.json
@@ -370,9 +370,7 @@
 					"html/m_activity_recom_info.html",
 					"account/m_account_exchange.html",
 					"account/m_exchange_morescore.html",
-					"account/m_account_bind_zhifubao.html",
-					"account/m_joinQQGroup.html",
-					"account/m_custom_service.html"
+					"account/m_account_bind_zhifubao.html"
 				],
 				"priority": 0
 			},
@@ -599,7 +597,8 @@
 					"js/mui.js"
 				],
 				"refer": [
-					"account/m_password_reset.html"
+					"account/m_password_reset.html",
+					"account/m_register.html"
 				],
 				"priority": 0
 			},
@@ -1621,29 +1620,6 @@
 				],
 				"refer": [],
 				"priority": 0
-			},
-			"account/m_joinQQGroup.html": {
-				"resources": [
-					"css/m_detail_press.css",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"js/mui.js",
-					"fonts/wafuli-iconfont.woff",
-					"css/m_common.css"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"account/m_custom_service.html": {
-				"resources": [
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"js/mui.js",
-					"fonts/wafuli-iconfont.woff",
-					"css/m_common.css"
-				],
-				"refer": [],
-				"priority": 0
 			}
 		},
 		"idle": {
@@ -2147,8 +2123,6 @@
 	  "images/guide-index.png",
 	  "images/guide-free.png",
 	  "images/guide-task.png",
-	  "images/guide-finance.png",
-	  "images/user-00.png",
-	  "images/user-02.png"
+	  "images/guide-finance.png"
 	]
 }
