--- a/manifest.json
+++ b/manifest.json
@@ -864,7 +864,8 @@
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
 					"js/mui.js",
-					"account/m_account_bind_zhifubao.html"
+					"account/m_account_bind_zhifubao.html",
+					"images/jsyh.png"
 				],
 				"refer": [],
 				"priority": 0
