--- a/manifest.json
+++ b/manifest.json
@@ -868,7 +868,9 @@
 					"images/jsyh.png",
 					"images/nyyh.png",
 					"images/payh.png",
-					"images/zxyh.png"
+					"images/zxyh.png",
+					"images/xyyh.png",
+					"images/zgyh.png"
 				],
 				"refer": [],
 				"priority": 0
